[gd_scene load_steps=3 format=3 uid="uid://cc7br6a5feqjy"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_slcc5"]
[ext_resource type="Texture2D" uid="uid://cg55gyrkwdadk" path="res://sprites/exit.png" id="2_ecfgt"]

[node name="Main menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_slcc5")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"TranslucentPanel"

[node name="Close Menu Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -96.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = 64.0
grow_horizontal = 0
theme_type_variation = &"RoundedButton"
icon = ExtResource("2_ecfgt")
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.5
offset_top = 64.0
offset_right = 96.5
offset_bottom = 109.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Cronotareas"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Label"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 19.5
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="Sound" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_type_variation = &"MenuPanelContainer"

[node name="Sound Label" type="Label" parent="VBoxContainer/Sound"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"MainMenuLabel"
text = "Sonido"
horizontal_alignment = 1
language = "es_ES"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/Sound"]
visible = false
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SFX Slider" type="HSlider" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 4
max_value = 1.0
step = 0.0

[node name="Interface" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_type_variation = &"MenuPanelContainer"

[node name="Interface Label" type="Label" parent="VBoxContainer/Interface"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"MainMenuLabel"
text = "Interfaz"
horizontal_alignment = 1
language = "es_ES"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/Interface"]
visible = false
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Themes button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"MainMenuButton"
text = "Cambiar tema"
language = "es_ES"

[node name="Language button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"MainMenuButton"
text = "Idioma"
language = "es_ES"

[node name="Saves" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_type_variation = &"MenuPanelContainer"

[node name="Saves Label" type="Label" parent="VBoxContainer/Saves"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"MainMenuLabel"
text = "Guardados"
horizontal_alignment = 1
language = "es_ES"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/Saves"]
visible = false
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Delete tasks button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"MainMenuButton"
text = "Eliminar tareas"
language = "es_ES"

[node name="Exit button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"MainMenuButton"
text = "Borrar guardados y salir"
language = "es_ES"

[connection signal="pressed" from="Close Menu Button" to="." method="_on_close_menu_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/SFX Slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/Themes button" to="." method="_on_themes_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Language button" to="." method="_on_language_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Delete tasks button" to="." method="_on_delete_tasks_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit button" to="." method="_on_delete_saves_and_exit"]
